--- a/vr_game_dev.html
+++ b/vr_game_dev.html
@@ -66,35 +66,34 @@
             <div class="col s12 m6 l6 push-m3 push-l3">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="prod_studio.gif">
+                        <img src="images/vr_game_dev/prod_studio.gif">
                         <span class="card-title">Escape Room VR (Group Project)</span>
                     </div>
                     <div class="card-content white-text">
                         <p>Creating an Escape Room game playable in Virtual Reality, using Unity 3D.</p>
                     </div>
                     <div class="card-action">
-                        <a href="Game Files.zip" download="Varun Sunil Bajaj - Escape Room VR.zip">Download Game</a>
-                        <a onclick="showhide_lvl1();">View Level 1 Pitch</a>
-                        <a onclick="showhide_lvl2();">View Level 2 Pitch</a>
-                        <a onclick="showhide_game();">Walkthrough</a><br>
-                        <a href="Escape Room VR - Final Design Document.pdf"
-                            download="Varun Sunil Bajaj - Escape Room Game Design Document.pdf">Download Game Design
+                        <a href="https://drive.google.com/file/d/1egLwqvuBlQrz1Q2yid_dOb3lwLzldomG/view?usp=sharing"
+                            download="Varun Sunil Bajaj - Escape Room VR.zip" target="_blank">Download Game</a>
+                        <a onclick="showhide_video('lvl1videodiv', 'lvl1videoid');">View Level 1 Pitch</a>
+                        <a onclick="showhide_video('lvl2videodiv', 'lvl2videoid');">View Level 2 Pitch</a>
+                        <a onclick="showhide_video('gamevideodiv', 'gamevideoid');">Walkthrough</a><br>
+                        <a href="https://drive.google.com/file/d/1vjOmxKLLtA21K7dQnXebfymWCfLTu_KQ/view?usp=sharing"
+                            download="Varun Sunil Bajaj - Escape Room Game Design Document.pdf" target="_blank">Download
+                            Game Design
                             Document</a>
                     </div>
-                    <div class="video-container" id="lvl1" style="display: none;">
-                        <video class="responsive-video" controls id="lvl1">
-                            <source src="Room 1 Pitch.mp4" type="video/mp4">
-                        </video>
+                    <div class="video-container" id="lvl1videodiv" style="display: none;">
+                        <iframe id="lvl1videoid"
+                            src="https://drive.google.com/file/d/1B5jQ9QmgjkiwU7QVr_eVTFrW8XMGVLwB/preview"></iframe>
                     </div>
-                    <div class="video-container" id="lvl2" style="display: none;">
-                        <video class="responsive-video" controls id="lvl2">
-                            <source src="Room 2 Pitch.mp4" type="video/mp4">
-                        </video>
+                    <div class="video-container" id="lvl2videodiv" style="display: none;">
+                        <iframe id="lvl2videoid"
+                            src="https://drive.google.com/file/d/1di8P8_xsXO2puxfIfbOoJEK-5xOpw3rj/preview"></iframe>
                     </div>
-                    <div class="video-container" id="game" style="display: none;">
-                        <video class="responsive-video" controls id="game">
-                            <source src="Escape Room VR Final Game Gameplay.mp4" type="video/mp4">
-                        </video>
+                    <div class="video-container" id="gamevideodiv" style="display: none;">
+                        <iframe id="gamevideoid"
+                            src="https://drive.google.com/file/d/1qaj9gJXuA1F1nhprzy7VZgewV7JoQWc9/preview"></iframe>
                     </div>
                 </div>
             </div>
@@ -124,6 +123,7 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
+    <script src="js/videoHelper.js"></script>
     <script>
         $(document).ready(function () {
             $('.scrollspy').scrollSpy();
@@ -131,32 +131,6 @@
                 full_width: true
             });
         });
-
-    </script>
-    <script>
-        function showhide_lvl1() {
-            var e = document.getElementById('lvl1');
-            if (e.style.display == 'none') e.style.display = 'block';
-            else e.style.display = 'none';
-            var f = document.getElementById('lvl1');
-            f.pause();
-        }
-
-        function showhide_lvl2() {
-            var e = document.getElementById('lvl2');
-            if (e.style.display == 'none') e.style.display = 'block';
-            else e.style.display = 'none';
-            var f = document.getElementById('lvl2');
-            f.pause();
-        }
-
-        function showhide_game() {
-            var e = document.getElementById('game');
-            if (e.style.display == 'none') e.style.display = 'block';
-            else e.style.display = 'none';
-            var f = document.getElementById('game');
-            f.pause();
-        }
 
     </script>
 </body>
