gameplay-prototyping additions/removals

--- a/gameplay_prototyping.html
+++ b/gameplay_prototyping.html
@@ -162,7 +162,8 @@
                     <div class="card-content white-text">
                         <p>You are a cube.
                             <br>DODGE!
-                            <br>Made using Unity 3D!</p>
+                            <br>Made using Unity 3D!
+                        </p>
                     </div>
                     <div class="card-action">
                         <a href="https://drive.google.com/file/d/1quoUeMNrYBXyK0pFYu8IK6zaoouOXiQP/view?usp=sharing"
@@ -172,47 +173,6 @@
                     <div class="video-container" id="cubevideodiv" style="display: none;">
                         <iframe id="cubevideoid"
                             src="https://drive.google.com/file/d/1j2DU6JK6pdz0LFdLqOIo2WqZoWAEajEW/preview"></iframe>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col s12 m4 l4">
-                <div class="card hoverable black">
-                    <div class="card-image">
-                        <img src="images/gameplay_prototyping/Game Screenshot.png">
-                        <span class="card-title">Alternate Control Project 1 (Group Project)</span>
-                    </div>
-                    <div class="card-content white-text">
-                        <p>Creating a controller called Octopad 3000, that allows 8 people to simultaneously control the
-                            movement of a fish underwater.</p>
-                    </div>
-                    <div class="card-action">
-                        <a href="https://drive.google.com/file/d/1XcZ-nlaNTwX_zdNFNG_okpoKsgVyHZB1/view?usp=sharing"
-                            download="Varun Sunil Bajaj - FishGame.zip" target="_blank">Game</a>
-                        <a href="https://drive.google.com/file/d/1ULL9lZSsFJ4JB8Z74z0a0vKlcCzCtpUN/view?usp=sharing"
-                            download="Varun Sunil Bajaj - Octopad_Manual.docx" target="_blank">Manual</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col s12 m4 l4">
-                <div class="card hoverable black">
-                    <div class="card-image">
-                        <img src="images/gameplay_prototyping/Capture.PNG">
-                        <span class="card-title">Alternate Control Project 2 (Group Project)</span>
-                    </div>
-                    <div class="card-content white-text">
-                        <p>A game where the player has to follow the sensei's orders to learn new moves. The player
-                            controls
-                            his/ her character by moving the hands and legs on a stick figure!</p>
-                    </div>
-                    <div class="card-action">
-                        <a href="https://drive.google.com/file/d/1xKOvBQMx4qH1vg5QkIy4_EpUujoDwn_F/view?usp=sharing"
-                            download="Varun Sunil Bajaj - DanceFu.gz" target="_blank">Game</a>
-                        <a href="images/gameplay_prototyping/Varun Sunil Bajaj - Stick Figure.jpg"
-                            download="Varun Sunil Bajaj - Stick Figure.jpg" target="_blank">Stick Figure Controller</a>
                     </div>
                 </div>
             </div>
@@ -245,6 +205,10 @@
                 </div>
             </div>
 
+        </div>
+
+        <div class="row">
+
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
@@ -263,9 +227,7 @@
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="row">
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
@@ -282,6 +244,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
@@ -303,6 +266,10 @@
                 </div>
             </div>
 
+        </div>
+
+        <div class="row">
+
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
@@ -323,9 +290,7 @@
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="row">
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
@@ -341,6 +306,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
@@ -362,6 +328,10 @@
                 </div>
             </div>
 
+        </div>
+
+        <div class="row">
+
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
@@ -377,9 +347,7 @@
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="row">
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
@@ -398,9 +366,60 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col s12 m4 l4">
+                <div class="card hoverable black">
+                    <div class="card-image">
+                        <img src="images/gameplay_prototyping/projectboostbanner.png">
+                        <span class="card-title">Project Boost (Individual)</span>
+                    </div>
+                    <div class="card-content white-text">
+                        <p>Make your way to the final platform without touching any other surfaces! This is a game I
+                            developed as a part of the "Complete C# Unity Game Developer Course".
+                        </p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://drive.google.com/file/d/1zQuHCevmgUFRf5Zy0CVbn0TNMlopVZla/view?usp=sharing"
+                            download="ProjectBoost_GameFiles_VarunBajaj.zip" target="_blank">Download</a>
+                        <a onclick="showhide_video('boostvideodiv', 'boostvideoid');">Watch Gameplay</a>
+                    </div>
+                    <div class="video-container" id="boostvideodiv" style="display: none;">
+                        <iframe id="boostvideoid"
+                            src="https://drive.google.com/file/d/1wSIP415zVjMyKborLHis4K5aHHdaziW3/preview"></iframe>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="row">
+
+            <div class="col s12 m4 l4">
+                <div class="card hoverable black">
+                    <div class="card-image">
+                        <img src="images/gameplay_prototyping/terminalhackerbanner.png">
+                        <span class="card-title">Terminal Hacker (Individual)</span>
+                    </div>
+                    <div class="card-content white-text">
+                        <p>Hack the network by solving anagrams! This is a game I developed as a part of the "Complete
+                            C# Unity Game Developer Course".
+                        </p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://drive.google.com/file/d/1CTguywWzb0nEAbXhDiLVFwCrEsdms2xZ/view?usp=sharing"
+                            download="TerminalHacker_GameFiles_VarunBajaj.zip" target="_blank">Download</a>
+                        <a onclick="showhide_video('terminalvideodiv', 'terminalvideoid');">Watch Gameplay</a>
+                    </div>
+                    <div class="video-container" id="terminalvideodiv" style="display: none;">
+                        <iframe id="terminalvideoid"
+                            src="https://drive.google.com/file/d/1uv2AjH0BxiddTdvc2Nadruy6lx2Z8uVS/preview"></iframe>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </main>
-    <footer class="page-footer black">
+    <footer class=" page-footer black">
         <div class="container">
             <ul style="list-style:none;" class="center">
                 <li style="display: inline; padding-right: 5px;"><a href="https://www.linkedin.com/in/VarunBajaj22"
