add golf with your friends level

--- a/leveldesign.html
+++ b/leveldesign.html
@@ -65,6 +65,7 @@
         </div>
       </nav>
     </div>
+
     <div class="row">
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
@@ -104,24 +105,31 @@
           </div>
         </div>
       </div>
+
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
           <div class="card-image">
-            <img src="images/leveldesign/Stunner3.png" />
-            <span class="card-title">Enemy-based Level Design (Individual)</span>
+            <img src="images/leveldesign/golfbanner.jpg" />
+            <span class="card-title" style="color: black;"><b>Golf With Your Friends (Individual)</b></span>
           </div>
           <div class="card-content white-text">
             <p>
-              Making levels specifically tailored to the enemies in your game,
-              and my level design process!
+              A Christmas themed 18 hole course I designed using the in-game level editor in 'Golf With Your Friends'
+              with gradually increasing difficulty!
             </p>
           </div>
           <div class="card-action">
-            <a href="https://drive.google.com/file/d/1kbgmUd_VFlYyhAy5QkPgfbO0zu-O1rbR/view?usp=sharing"
-              download="Varun Sunil Bajaj - Enemy-based Level Design.pdf" target="_blank">Download</a>
+            <a onclick="showhide_video('golfvideodiv', 'golfvideoid');">Watch Gameplay</a>
+            <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2333713135" target="_blank">Steam
+              Workshop Page</a>
+          </div>
+          <div class="video-container" id="golfvideodiv" style="display: none;">
+            <iframe id="golfvideoid"
+              src="https://drive.google.com/file/d/1uvxc6_G1zo23wUfEBw2ZUsWBLv5yzQDf/preview"></iframe>
           </div>
         </div>
       </div>
+
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
           <div class="card-image">
@@ -145,6 +153,7 @@
         </div>
       </div>
     </div>
+
     <div class="row">
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
@@ -163,6 +172,7 @@
           </div>
         </div>
       </div>
+
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
           <div class="card-image">
@@ -184,6 +194,7 @@
           </div>
         </div>
       </div>
+
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
           <div class="card-image">
@@ -232,6 +243,7 @@
           </div>
         </div>
       </div>
+
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
           <div class="card-image">
@@ -248,6 +260,7 @@
           </div>
         </div>
       </div>
+
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
           <div class="card-image">
@@ -261,6 +274,27 @@
             <a href="https://drive.google.com/file/d/1THe3VrjCdQfBjcqTZNCuaE4UBRGsHYkn/view?usp=sharing"
               download="Varun Sunil Bajaj - Level Design -Graduate Seminar-Storytelling using Level Design.pptx"
               target="_blank">Download</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col s12 m4 l4">
+        <div class="card hoverable black">
+          <div class="card-image">
+            <img src="images/leveldesign/Stunner3.png" />
+            <span class="card-title">Enemy-based Level Design (Individual)</span>
+          </div>
+          <div class="card-content white-text">
+            <p>
+              Making levels specifically tailored to the enemies in your game,
+              and my level design process!
+            </p>
+          </div>
+          <div class="card-action">
+            <a href="https://drive.google.com/file/d/1kbgmUd_VFlYyhAy5QkPgfbO0zu-O1rbR/view?usp=sharing"
+              download="Varun Sunil Bajaj - Enemy-based Level Design.pdf" target="_blank">Download</a>
           </div>
         </div>
       </div>
