--- a/leveldesign.html
+++ b/leveldesign.html
@@ -145,6 +145,8 @@
             <a onclick="showhide_video('portalvideodiv', 'portalvideoid');">Watch Gameplay</a>
             <a href="https://drive.google.com/file/d/1hyOzs5jlIkaJropNBl0YWZsIZGpFFFHN/view?usp=sharing"
               download="Varun Sunil Bajaj - Portal 2 Level Design Document.pdf" target="_blank">Download Document</a>
+            <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1667976257" target="_blank">Steam
+              Workshop Page</a>
           </div>
           <div class="video-container" id="portalvideodiv" style="display: none;">
             <iframe id="portalvideoid"
