add page titles

--- a/leveldesign.html
+++ b/leveldesign.html
@@ -105,6 +105,11 @@
         </div>
       </nav>
     </div>
+    <div class="row">
+      <div class="col s12 m12 l12" style="text-align: center; color: white;">
+        <h4>Level Design</h4>
+      </div>
+    </div>
 
     <div class="row">
       <div class="col s12 m4 l4">
