--- a/vr_game_dev.html
+++ b/vr_game_dev.html
@@ -107,6 +107,11 @@
             </nav>
         </div>
         <div class="row">
+            <div class="col s12 m12 l12" style="text-align: center; color: white;">
+                <h4>VR Game Dev</h4>
+            </div>
+        </div>
+        <div class="row">
             <div class="col s12 m6 l6 push-m3 push-l3">
                 <div class="card hoverable black">
                     <div class="card-image">
