--- a/gamebalance.html
+++ b/gamebalance.html
@@ -107,6 +107,11 @@
             </nav>
         </div>
         <div class="row">
+            <div class="col s12 m12 l12" style="text-align: center; color: white;">
+                <h4>Game Balance</h4>
+            </div>
+        </div>
+        <div class="row">
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
