--- a/gameplay_prototyping.html
+++ b/gameplay_prototyping.html
@@ -106,6 +106,11 @@
                 </div>
             </nav>
         </div>
+        <div class="row">
+            <div class="col s12 m12 l12" style="text-align: center; color: white;">
+                <h4>Gameplay and Prototyping</h4>
+            </div>
+        </div>
 
         <div class="row">
             <div class="col s12 m4 l4">
