update gamedesign, leveldesign with medium links

--- a/gamedesign.html
+++ b/gamedesign.html
@@ -107,7 +107,7 @@
                 <h4>Game Design</h4>
             </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
@@ -156,7 +156,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="row">
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
@@ -168,24 +168,7 @@
                         <p>Critiquing this choice-driven interactive narrative storytelling experience!</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/1d0e5KllAVU84cBv0P1anIF2bLe1sVIwH/view?usp=sharing"
-                            download="Varun Sunil Bajaj - Game Design - Critique 4 - Life is Strange.pdf"
-                            target="_blank">Download</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col s12 m4 l4">
-                <div class="card hoverable black">
-                    <div class="card-image">
-                        <img src="images/gamedesign/inception.jpg">
-                        <span class="card-title">Inter-media Game Pitch (Individual)</span>
-                    </div>
-                    <div class="card-content white-text">
-                        <p>A game pitch for a cross between Inception and The Hunger Games.</p>
-                    </div>
-                    <div class="card-action">
-                        <a href="https://drive.google.com/file/d/11H4JolA5ux8jC7NKsKJxBk4xjTnjO5PJ/view?usp=sharing"
-                            download="Varun Sunil Bajaj - Game Design - Game Pitch.pptx" target="_blank">Download</a>
+                        <a href="https://link.medium.com/eopZGxbsppb" target="_blank">Read on Medium</a>
                     </div>
                 </div>
             </div>
