--- a/leveldesign.html
+++ b/leveldesign.html
@@ -336,8 +336,7 @@
             </p>
           </div>
           <div class="card-action">
-            <a href="https://drive.google.com/file/d/1kbgmUd_VFlYyhAy5QkPgfbO0zu-O1rbR/view?usp=sharing"
-              download="Varun Sunil Bajaj - Enemy-based Level Design.pdf" target="_blank">Download</a>
+            <a href="https://link.medium.com/OxJha3zDvpb" target="_blank">Read on Medium</a>
           </div>
         </div>
       </div>
