add ac, change banners

--- a/index.html
+++ b/index.html
@@ -111,7 +111,27 @@
         <div class="container">
             <div class="section">
                 <div class="row">
-                    <div class="col s12 m6 l6">
+                    <div class="col s12 m4 l4">
+                        <div class="card hoverable black">
+                            <div class="card-image">
+                                <img src="images/home/ac_vr.jpg" />
+                                <span class="card-title">Assassin's Creed for VR</span>
+                            </div>
+                            <div class="card-content white-text">
+                                <p>
+                                    Project currently in development.
+                                </p>
+                            </div>
+                            <div class="card-action">
+                                <!-- <a href="#" target="_blank">Trailer</a> -->
+                                <a class="waves-effect waves-light btn"
+                                    href="https://news.ubisoft.com/en-us/article/6GznsIJyxNpulUSMJNxLs2/assassins-creed-and-splinter-cell-coming-to-oculus-vr"
+                                    target="_blank" id="playbutton">Info</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col s12 m4 l4">
                         <div class="card hoverable black">
                             <div class="card-image">
                                 <img src="images/home/sotremake.jpg" />
@@ -131,7 +151,7 @@
                         </div>
                     </div>
 
-                    <div class="col s12 m6 l6">
+                    <div class="col s12 m4 l4">
                         <div class="card hoverable black">
                             <div class="card-image">
                                 <img src="images/home/lightless_banner.png" />
@@ -164,7 +184,7 @@
                     </div>
                 </div>
             </div>
-            <div class="parallax"><img src="images/home/mywork.PNG" alt="My Work Banner"></div>
+            <div class="parallax"><img src="images/home/pop_banner_1.jpg" alt="My Work Banner"></div>
         </div>
 
         <div class="container">
@@ -273,7 +293,7 @@
                     </div>
                 </div>
             </div>
-            <div class="parallax"><img src="images/home/aboutme.png" alt="About Me Banner"></div>
+            <div class="parallax"><img src="images/home/pop_banner_2.jpg" alt="About Me Banner"></div>
         </div>
 
         <div class="container">
@@ -319,7 +339,8 @@
                                                     Studios, Mumbai</a> since
                                                 July 2019
                                                 <ul>
-                                                    <li>- Working on Prince of Persia: Sands of Time Remake</li>
+                                                    <li>- Working on Assassin's Creed for VR</li>
+                                                    <li>- Worked on Prince of Persia: Sands of Time Remake</li>
                                                 </ul>
                                                 <br>
                                             </li>
