remove w3c, add udemy

--- a/index.html
+++ b/index.html
@@ -389,20 +389,16 @@
                             <div class="slider">
                                 <ul class="slides">
                                     <li>
+                                        <img src="images/home/udemy-leveldesign.jpg">
+                                    </li>
+                                    <li>
                                         <img src="images/home/mit.jpg">
-
                                     </li>
                                     <li>
                                         <img src="images/home/ue4.jpg">
-
-                                    </li>
-                                    <li>
-                                        <img src="images/home/W3C.JPG">
-
                                     </li>
                                     <li>
                                         <img src="images/home/BEC.jpg">
-
                                     </li>
                                 </ul>
                             </div>
