--- a/index.html
+++ b/index.html
@@ -135,11 +135,15 @@
                         <div class="card hoverable black">
                             <div class="card-image">
                                 <img src="images/home/sotremake.jpg" />
-                                <span class="card-title">Prince of Persia: Sands of Time Remake</span>
+                                <span class="card-title">Prince of Persia: The Sands of Time Remake</span>
                             </div>
                             <div class="card-content white-text">
                                 <p>
-                                    Junior Technical Level Designer at Ubisoft India Studios.
+                                    <ul>
+                                        <li>- Scripting and implementation of cinematics and cutscenes</li>
+                                        <li>- Creating scripted events</li>
+                                        <li>- Setting up landscape cameras in multiple levels</li>
+                                    </ul>
                                 </p>
                             </div>
                             <div class="card-action">
@@ -307,40 +311,41 @@
                             <div class="card-content">
                                 <p>
                                 <h5 class="white-text">About Me</h5>
-                                <p style="color:white;">I work as a <b>Junior Technical Level Designer</b> at <b><span
-                                            style="color: #F36E21;">Ubisoft India Studios</span></b> in Mumbai, India. I
+                                <p style="color:white;">I work as a <b>Level Designer</b> at <b><span
+                                            style="color: #F36E21;">Ubisoft India</span></b> in Mumbai, India. I
                                     graduated with my <b>MS in Game Design and
                                         Development</b> from <b><span style="color:#F36E21">Rochester Institute of
                                             Technology</span></b> in May 2019!</p>
                                 <dl style="list-style: none;">
                                     <dt class="orange-text">Softwares</dt>
-                                    <dd class="white-text" style="margin-bottom: 20px;">Anvil, Unreal Engine 4, Unity
+                                    <dd class="white-text" style="margin-bottom: 20px;">Anvil, Unreal Engine, Unity
                                         3D,
                                         Maya,
-                                        ZBrush, Substance Painter, Adobe Premiere Pro, Adobe After Effects, Camtasia
-                                        Studio
+                                        Adobe Premiere Pro
                                     </dd>
-                                    <dt class="orange-text">Technologies</dt>
-                                    <dd class="white-text" style="margin-bottom: 20px;">Virtual Reality, Augmented
-                                        Reality,
-                                        Leap Motion</dd>
                                     <dt class="orange-text">Programming Languages</dt>
                                     <dd class="white-text" style="margin-bottom: 20px;">C#, Blueprint</dd>
                                     <dt class="orange-text">Interests</dt>
                                     <dd class="white-text" style="margin-bottom: 20px;">Level Design, Game Design, Game
-                                        Development, Modeling, Video Editing</dd>
+                                        Development, Video Editing</dd>
                                     <dt class="orange-text">Work Experience</dt>
                                     <dd class="white-text">
                                         <ul>
                                             <li>
-                                                Junior Technical Level Designer at <a
-                                                    href="https://www.ubisoft.com/en-US/studio/mumbai.aspx"
-                                                    target="_blank" style="text-decoration: none;">Ubisoft India
-                                                    Studios, Mumbai</a> since
-                                                July 2019
+                                                Level Designer at <a
+                                                    href="https://www.ubisoft.com/en-us/company/careers/locations/mumbai"
+                                                    target="_blank" style="text-decoration: none;">Ubisoft India</a>
                                                 <ul>
                                                     <li>- Working on Assassin's Creed for VR</li>
-                                                    <li>- Worked on Prince of Persia: Sands of Time Remake</li>
+                                                </ul>
+                                                <br>
+                                            </li>
+                                            <li>
+                                                Junior Technical Level Designer at <a
+                                                    href="https://www.ubisoft.com/en-us/company/careers/locations/mumbai"
+                                                    target="_blank" style="text-decoration: none;">Ubisoft India</a>
+                                                <ul>
+                                                    <li>- Worked on Prince of Persia: The Sands of Time Remake</li>
                                                 </ul>
                                                 <br>
                                             </li>
@@ -350,7 +355,7 @@
                                                 <br>
                                                 <br>
                                             </li>
-                                            <li>Summer Internship at <a href="https://www.idtech.com" target="_blank"
+                                            <li>Instructor at <a href="https://www.idtech.com" target="_blank"
                                                     style="text-decoration: none;">iD Tech</a> as an instructor,
                                                 teaching
                                                 the courses below, from May-Aug 2018
