--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
             <div class="section no-pad-bot">
                 <div class="container">
                     <div class="row center">
-                        <h5 class="header col s12 light" style="color: black;">My Work</h5>
+                        <h5 class="header col s12 light">My Work</h5>
                     </div>
                 </div>
             </div>
-            <div class="parallax"><img src="images/home/pop_banner_1.jpg" alt="My Work Banner"></div>
+            <div class="parallax"><img src="images/home/pop_banner_2.jpg" alt="My Work Banner"></div>
         </div>
 
         <div class="container">
@@ -287,7 +287,7 @@
                     </div>
                 </div>
             </div>
-            <div class="parallax"><img src="images/home/pop_banner_2.jpg" alt="About Me Banner"></div>
+            <div class="parallax"><img src="images/home/pop_banner_1.jpg" alt="About Me Banner"></div>
         </div>
 
         <div class="container">
