fix id tech experience

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                                                 <br>
                                             </li>
                                             <li>Instructor at <a href="https://www.idtech.com" target="_blank"
-                                                    style="text-decoration: none;">iD Tech</a> as an instructor,
+                                                    style="text-decoration: none;">iD Tech</a>,
                                                 teaching
                                                 the courses below, from May-Aug 2018
                                                 <ul>
